# fuel-prices-at-spanish-gas-stations-sdk

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  SECURITY.md
.sdk/: package-lock.json  package.json
go/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  fuel-prices-at-spanish-gas-stations.go  go.mod
go-cli/: .gitignore  Makefile  README.md  go.mod  main.go  words.go
go-mcp/: .gitignore  Makefile  README.md  go.mod  main.go  tools.go
lua/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  config.lua  features.lua  (+3 more)
py/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  config.py  features.py  fuelpricesatspanishgasstations_sdk.py  fuelpricesatspanishgasstations_types.py  pyproject.toml
py/core/: context.py  control.py  error.py  helpers.py  response.py  result.py  spec.py
py/entity/: dataset_entity.py  distribution_entity.py
py/feature/: base_feature.py  debug_feature.py  idempotency_feature.py  log_feature.py  paging_feature.py  proxy_feature.py  rbac_feature.py  retry_feature.py  test_feature.py  timeout_feature.py
py/test/: feature_harness.py  runner.py  test_dataset_direct.py  test_dataset_entity.py  test_distribution_direct.py  test_distribution_entity.py  test_exists.py  test_feature.py  test_netsim.py  test_pipeline.py  test_primary_utility.py  test_readme_examples.py
py/utility/: clean.py  done.py  feature_add.py  feature_hook.py  fetcher.py  make_context.py  make_error.py  make_fetch_def.py  make_response.py  make_result.py  make_spec.py  make_url.py  prepare_headers.py  prepare_path.py  register.py  transform_response.py
(+438 files in other folders)
