[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "voxgig-sdk-fuel-prices-at-spanish-gas-stations"
version = "0.0.1"
description = "Unofficial generated Python SDK for the Fuel Prices at Spanish Gas Stations public API. Not affiliated with or endorsed by the upstream API provider."
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
keywords = ["voxgig", "sdk", "generated-sdk", "openapi", "api-client", "fuel-prices-at-spanish-gas-stations"]
dependencies = [
    "requests>=2.33",
]

[project.urls]
Homepage = "https://github.com/voxgig-sdk/fuel-prices-at-spanish-gas-stations-sdk"
Repository = "https://github.com/voxgig-sdk/fuel-prices-at-spanish-gas-stations-sdk"
Issues = "https://github.com/voxgig-sdk/fuel-prices-at-spanish-gas-stations-sdk/issues"

# Explicit package list — setuptools auto-discovery refuses to pick when
# multiple top-level dirs (core/entity/feature/utility) are present.
[tool.setuptools.packages.find]
include = ["core*", "entity*", "feature*", "utility*"]
